[package]
name = "tcp-scan"
version = "0.0.1"
edition = "2021"
description = "A TCP Scanner."
repository = "https://github.com/hzqd/tcp-scan"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
